src/main/java/com/example/jobhunter_myself/util/error/IdInvalidException.java
package com.example.jobhunter_myself.util.error;

public class IdInvalidException extends Exception {
    public IdInvalidException(String message) {
        super(message);
    }
}
